--- a/Handy/mkdocs.yml
+++ b/Handy/mkdocs.yml
@@ -2,8 +2,12 @@ site_name: Dongyun Han
 pages:
   - Home: index.md
   - Intorduction: introduction.md
-  - Visualanalytics: visualanalytics.md
-  - How To: how_to.md
-  - big5: big5.md
-  - svg: svg.md
-extra_css: [big5.css, svg.css]
+  # - Visualanalytics: visualanalytics.md
+  # - How To: how_to.md
+  # - big5: big5.md
+  # - svg: svg.md
+# extra_css: [big5.css, svg.css]
+markdown_extensions:
+  - fontawesome_markdown
+
+theme: lux
